Created new component for new applications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
+
+<app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-7">
-      <h3>App Component </h3>
+    <div class="col-md-12">
+     <app-recipes>
+       
+     </app-recipes>
 
-      <app-servers></app-servers>
+     <app-shopping-list></app-shopping-list>
+
+     
     </div>
   </div>
 </div>
