--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 
-<app-header></app-header>
+<app-header (selectedFeature)="changeFeatureName($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-     <app-recipes>
+     <app-recipes *ngIf = "selectedFeatue === 'recipe'">
        
      </app-recipes>
 
-     <app-shopping-list></app-shopping-list>
+     <app-shopping-list  *ngIf = "selectedFeatue !== 'recipe'"></app-shopping-list>
+
+     <!-- <app-servers></app-servers> -->
 
      
     </div>
