--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,3 +1,33 @@
+
+<div class="row">
+  <div class="col-xs-12">
+    <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="max-height : 100px">
+  </div>
+</div>
+
+<div class="row">
+   <div class="col-xs-12" ></div>
+     <h1>name {{recipe.name}}</h1> 
+</div>
+
+
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-gtoup">
+      <button
+        type="button"
+        class="btn btn-primary dropdown-toggle">
+        Manage Recipe <span class="caret"></span>
+      </button>
+
+      <ul class="dropdown-menu">
+        <li> <a href="#">To Shopping List </a></li>  
+        <li> <a href="#">Edit Recipe </a></li>  
+        <li> <a href="#">Delete Recipe </a></li>  
+      </ul>
+    </div>
+  </div>
+</div>
 <p>
-  recipe-details works!
-</p>
+   {{recipe.description}}
+  </p>
