--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,12 +1,16 @@
 
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list>
+    <app-recipe-list (selectedRecipeEmit)="selectedRecipeItem = $event">
       
     </app-recipe-list>
   </div>
 
   <div class="col-md-7"> 
-    <app-recipe-details></app-recipe-details>  
+    <app-recipe-details *ngIf="selectedRecipeItem; else infoText" 
+    [recipe]="selectedRecipeItem"></app-recipe-details> 
+    <ng-template #infoText>
+       <p>Please select item</p>
+    </ng-template> 
   </div>
 </div>
