--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -13,14 +13,14 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-gtoup">
+    <div class="btn-gtoup" appDropdown>
       <button
         type="button"
         class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
 
-      <ul class="dropdown-menu">
+      <ul class="dropdown-menu" >
         <li> <a href="#">To Shopping List </a></li>  
         <li> <a href="#">Edit Recipe </a></li>  
         <li> <a href="#">Delete Recipe </a></li>  
