--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,7 +9,7 @@
        
         <app-recipe-item *ngFor="let recipe of recipes" 
         [recipe]="recipe" 
-        (recipeDetails)="selectedRecipe(recipe)"></app-recipe-item>
+        ></app-recipe-item>
 
     </div>
 </div>
