--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (selectedRecipeEmit)="selectedRecipeItem = $event">
+    <app-recipe-list >
       
     </app-recipe-list>
   </div>
